<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/price_list_cl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PriceListFragment">

        <TextView
            android:id="@+id/price_list_heading_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/price_list"
            android:padding="20dp"
            android:textSize="22sp"
            android:textColor="@color/PrimaryColor"
            android:background="@color/HeadingColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <TextView
            android:id="@+id/title_bar_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="Strzyżenie"
            android:layout_margin="20dp"
            android:background="@drawable/gradient_price_list"
            android:paddingBottom="10dp"
            android:paddingTop="30dp"
            android:paddingRight="60dp"
            android:textColor="#808080"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price_list_heading_tv" />

        <TextView
            android:id="@+id/bottom_bar_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/gradient_price_list"
            android:textColor="#808080"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_bar_1" />

        <TextView
            android:id="@+id/list_1_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_marginLeft="40dp"
            android:text="@string/list_1_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bottom_bar_1" />

        <TextView
            android:id="@+id/list_1_price_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginRight="60dp"
            android:text="@string/list_1_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bottom_bar_1" />

        <TextView
            android:id="@+id/title_bar_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="Inne usługi"
            android:layout_margin="20dp"
            android:background="@drawable/gradient_price_list"
            android:paddingBottom="10dp"
            android:paddingTop="30dp"
            android:paddingRight="60dp"
            android:textColor="#808080"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_1_price_tv" />

        <TextView
            android:id="@+id/bottom_bar_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/gradient_price_list"
            android:textColor="#808080"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_bar_2" />

        <TextView
            android:id="@+id/list_2_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_marginLeft="40dp"
            android:text="@string/list_2_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bottom_bar_2" />

        <TextView
            android:id="@+id/list_2_price_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginRight="60dp"
            android:text="@string/list_2_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bottom_bar_2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>