<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/PrimaryColor"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/offer_cl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/PrimaryColor"
        tools:context=".AboutUsFragment">

        <TextView
            android:id="@+id/about_us_heading_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/about_us"
            android:padding="20dp"
            android:textSize="22sp"
            android:textColor="@color/PrimaryColor"
            android:background="@color/HeadingColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/about_us_heading_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/about_us_heading"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_us_heading_tv" />

        <View
            android:id="@+id/view"
            android:layout_width="90dp"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            app:layout_constraintStart_toStartOf="@+id/about_us_heading_text"
            app:layout_constraintTop_toBottomOf="@+id/about_us_heading_text" />

        <TextView
            android:id="@+id/about_us_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us_text"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:textSize="16sp"
            android:justificationMode="inter_word"
            android:paddingRight="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <ImageView
            android:id="@+id/about_us_img1"
            android:layout_width="361dp"
            android:layout_height="550dp"
            android:layout_margin="20dp"
            android:background="@drawable/about_us_img1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_us_text" />

        <ImageView
            android:id="@+id/about_us_img2"
            android:layout_width="361dp"
            android:layout_height="550dp"
            android:layout_margin="20dp"
            android:background="@drawable/about_us_img2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_us_img1" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>